--- a/SocketClient/SocketClient.csproj
+++ b/SocketClient/SocketClient.csproj
@@ -42,8 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPResolver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SocketManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
